--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-transition-group": "^2.2.0"
   }
 }
